# gst_test

./: CMakeLists.txt  README.md
scripts/: gst_audio_receive.sh  gst_audio_send.sh  gst_video_receive.sh  gst_video_send.sh
src/: gst_receive.cpp  gst_send.cpp
